# Game-Stream-Trends-legacy-2024

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-lint.yaml
dev/duckdb/: Dockerfile  README.md  docker-compose.yaml  init.sql.template
infra/airflow/: .dockerignore  Dockerfile  README.md  docker-compose.yaml
infra/airflow/scripts/: init_airflow_vars.py
infra/duckdb/: Dockerfile  docker-compose.yaml  init.sql.template
infra/minio/: .dockerignore  README.md  docker-compose.yaml  nginx.conf.template
infra/minio/scripts/: client_minio_test.py  host_minio_test.py
src/common/: config.py  ingest_runner.py
src/common/ingest/: runner.py
src/common/logging/: minio_handler.py
src/common/minio/: client.py
src/common/utils/: logging_utils.py  minio_utils.py
src/dags/steam/: steam_bronze_4hourly.py  steam_bronze_daily.py  steam_silver_4hourly.py  steam_silver_daily.py
src/dags/twitch/: twitch_bronze_4hourly.py  twitch_silver_4hourly.py
src/steam/: utils.py
src/steam/ingest/: fetch_details.py  fetch_discounts.py  fetch_news.py  fetch_players.py  fetch_review_metas.py  steam_fetch_config.py
src/steam/transform/: transform_details_to_images.py  transform_discounts.py  transform_players.py  transform_review_metas.py
src/twitch/ingest/: fetch_streams.py  fetch_top_categories.py  twitch_fetch_config.py  twitch_settings.py
src/twitch/transform/: transform_streams.py  transform_top_categories.py
