[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "Game-Stream-Trends"
version = "0.1.0"
description = "Combine game data and streaming platform data to track the latest trends in gaming and streaming."
packages = [
    { include = "scripts", from = "infra/minio" },
    { include = "scripts", from = "infra/airflow" },
    { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
apache-airflow = "2.10.4"
python-dotenv = "1.0.1"
minio = "7.2.15"
requests = "2.32.3"
dask = "^2025.1.0"
distributed = "^2025.1.0"
pyarrow = "^19.0.0"
pandas = "^2.2.3"
s3fs = ">=2023.10.0,<2025.0.0"
boto3 = ">=1.28,<1.36"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.0.0"
flake8 = "6.1.0"
flake8-pyproject = "^1.2.3"

[tool.flake8]
max-line-length = 88
ignore = ["E203", "W503", "E501", "E402"]
